2010-09-21  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, geany.glade:
   Move Go to Marker menu items to Search menu.
   Rename popup editor menu item Commands -> Edit.
 * src/callbacks.c, src/search.c, src/search.h:
   Move find_again() to search.c.
 * src/search.c:
   Make Find Selected commands repeat the last search if the selection
   was lost.
 * doc/geany.txt, doc/geany.html:
   Add docs for Find Selection keybindings.
 * src/interface.c, src/keybindings.c, geany.glade:
   Unify Find Selection strings.
 * src/interface.c, src/ui_utils.c, geany.glade:
   Group editor popup Insert commands in a submenu, with extra items
   for the most commonly used Insert Comments commands.
   Show Edit->Commands before Format in menubar Edit menu (to match
   keybindings order).
   Show Open Selected F_ile popup item below submenus.


2010-09-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/ui_utils.c:
   Refactor shared submenu code with GeanySharedMenu array.
 * src/interface.c, src/ui_utils.c, geany.glade:
   Add Search submenu for Find Selected, Find Usage, Go to Tag items,
   shared with the editor popup menu.
 * src/document.c:
   Open a new document automatically after closing all documents.


2010-09-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/callbacks.c:
   Prompt for reloading if the document has an undo stack to avoid
   losing undo ability on accidental reloading (patch by Colomban
   Wendling, thanks).
 * src/project.c, src/geanyobject.c, src/geanyobject.h,
   doc/pluginsignals.c:
   Add plugin signals project-dialog-create and
   project-dialog-confirmed so plugins can append a Project Properties
   notebook tab (patch by Jiří Techet, thanks).
 * src/ui_utils.h, src/plugindata.h, src/main.c:
   Add main_widgets.project_menu to API (patch by Jiří Techet, thanks).
 * src/plugindata.h, src/msgwindow.c, src/msgwindow.h, src/search.c,
   src/plugins.c, plugins/geanyfunctions.h: